# A-NumInflation

./: .gitignore  Code_Calc_Explanation.ipynb  Higgs_USR_Detailed_Scan.ipynb  README.md  demo_mcmc_mock.py  inf_dyn_MS_full.py  inf_dyn_background.py  inf_dyn_plot.py  inflation_models.py  numerical_observables_calculation.py  pyproject.toml  remote_execution_patterns.md  smooth_usr_model.py
models/: Smooth_USR.py  __init__.py  higgs.py
notebooks/: Approximation_Validity_Check.ipynb  CMB_Anomaly.ipynb  Code_Calc_Explanation.ipynb  Higgs_USR_Detailed_Scan.ipynb  Initial_Conditions_USR_Exploration.ipynb  Mapping_ns_r_Sensitivity.ipynb  Num_Dyn_Inflation.ipynb  Showcase_Features.ipynb  USR_Dynamics_Probe.ipynb  USR_Golden_Search_Corrected.ipynb  USR_PhaseSpace_Heatmap.ipynb  USR_Search.ipynb  ns_Calculation.ipynb  ns_calculation_demo.ipynb  ns_offset_calibration.ipynb  smooth_usr_comparison.ipynb  visualize_usr_eta.py
outputs/: USR_duration_heat_4.93to5.93_yi_1.00to0.01_crit_5.50_cc5700e6.json  USR_duration_heat_4.93to5.93_yi_10.00to0.10_1989c44c.json  USR_duration_heat_4.93to5.93_yi_10.00to0.10_7716c853.json  USR_duration_heat_4.93to5.93_yi_10.00to0.10_a4376c5b.json  USR_duration_heat_4.93to5.93_yi_10.00to0.10_b0ca643d.json  USR_duration_heat_4.93to5.93_yi_10.00to0.10_c3becdf7.json  USR_duration_heat_4.93to5.93_yi_10.00to0.10_crit_5.50_99222526.json  USR_duration_heat_4.93to5.93_yi_10.00to0.10_dc277a37.json  USR_duration_heat_5.18to5.93_yi_0.10to0.00_crit_5.50_4591e213.json  USR_duration_heat_5.18to5.93_yi_0.15to0.01_crit_5.50_d03a4132.json  (+29 more)
scripts/: Higgs_USR.ipynb  (+26 more)
(+863 files in other folders)
